--- a/Home Page.css
+++ b/Home Page.css
@@ -5,21 +5,55 @@ html {background-color: #f1faee;
     
 h1{
     text-align: center;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 50px;
-    color:#1d3557;
-    
+    color:#1d3557;   
 }
 
 h2{color: #e63946;
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+h3{
+    text-align: center;
+    font-size: 20px;
     font-weight: normal;
 }
 
-#signin{
-    background-color: white;
-    text-align: right;
+#table{
+    text-align: center;
+    font-size: 15px;
 }
 
 
+#movesign{
+    text-align: right;
+}
+    
+
+.estimation{
+   margin-left: auto;
+   margin-right: auto;
+  
+}
+
+#header_row{
+    font-size: 20px;
+    color:royalblue;
+    font-weight: 700;
+}
+
+#data_row{
+    font-size: 15px;
+}
+
+table, th, tr{
+    border: 1px solid black;
+    width: auto;
+}
+
+button:hover{
+    background-color:rgba(192, 192, 192, 0.877);
+}
